--- a/public/addnote.html
+++ b/public/addnote.html
@@ -20,7 +20,7 @@
       
       <hr>
       
-      <a href="/home" class="btn btn-danger btn-lg"><span class="fa fa-eye"></span> View All Notes</a>
+      <a href="/" class="btn btn-danger btn-lg"><span class="fa fa-eye"></span> View All Notes</a>
     </div>
     <div class="row">
 
@@ -63,8 +63,8 @@
     $("#add-btn").on("click", function (event) {
       event.preventDefault();
       var newNote = {
-        Title: $("#noteTitle").val().trim(),
-        Note: $("#noteMsg").val().trim(),
+        notetitle: $("#noteTitle").val().trim(),
+        notebody: $("#noteMsg").val().trim(),
         };
 
       // Question: What does this code do?
